# ai-security-demos

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci-cd.yml
data/: chatter-detection-dataset - baby-chatter-detection-dataset.csv  chatter-detection-dataset - blackbriar-chatter-detection-dataset.csv  chatter-detection-dataset - extended-chatter-detection-dataset.csv  chatter-detection-dataset - toddler-chatter-detection-dataset.csv  chatter-detection-dataset - typos-aliases-blackbriar-chatter-detection-dataset.csv  chatter-detection-dataset.csv
notebooks/: under-the-chatter-detection-hood.ipynb
src/ai_security/: chatter_demo.py  demo1_sklearn.py  demo2_exact_match.py  demo3_generative.py  discriminative_chatter_detector.py  expert_malware_detector.py  generative_chatter_detector.py  generative_malware_detector.py  malware_demo.py  rules_chatter_detector.py
tests/: test_chatter_detectors.py  test_discriminative_chatter_detector.py
