[project]
name = "ai-security"
version = "0.1.0"
description = "Chatter detection demos for AI and Security course"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "jupyterlab",
    "pytest",
]


[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[tool.hatch.build.targets.wheel]
packages = ["src/ai_security"]